# morse_code_translator

./: LICENSE  README.md  TOPIC.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish_package.yml
morse_code_translator/: dictionary.py  enums.py  translator.py
tests/: test_dictionary.py  test_translator.py
