[tool.poetry]
name = "morse-code-tranlator"
version = "0.0.1"
description = ""
authors = ["Yurii Bondarenko"]

[tool.poetry.dependencies]
python = "^3.6"
typing-extensions = "^3.10.0"

[tool.poetry.dev-dependencies]
pytest = "6.2.4"
pytest-cov = "2.12.0"
flake8 = "3.9.2"
isort = "5.8.0"
coverage = "5.5"
twine = "^3.4.2"

[tool.black]
line-length = "100"
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.config
  | \.mypy_cache
  | \.venv
  | build
  | dist
  | home/runner
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
